# sunnbear

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/actions/build_type/: action.yml
.github/actions/bump_version/: action.yml
.github/actions/check_changelog/: action.yml
.github/actions/pre_commit/: action.yml
.github/actions/unit_test/: action.yml
.github/actions/update_badges/: action.yml
.github/actions/update_readme/: action.yml
.github/actions/update_splash/: action.yml
.github/actions/upload_version_artefacts/: action.yml
.github/scripts/: ci_compute_metrics.py  create_splash.sh  update_readme_urls.py
.github/workflows/: _unit_tests.yml  codeql.yml  dependabot_automerge.yml  pull_request.yml  pull_request_to_develop.yml  pull_request_to_main.yml  push_to_branch.yml  push_to_develop.yml  push_to_main.yml  push_to_minor_branch.yml  push_to_release_branch.yml  release_tag.yml  scorecard.yml
scripts/: extract_changelog.py  release.py
src/sunnbear/: __init__.py  dummy.py  errors.py
src/sunnbear/functions/: __init__.py  _formula.py  _identity.py  _param_values.py  _recipes.py  _registry.py  _test_function.py  _types.py  examples.py
src/sunnbear/functions/catalog/: __init__.py
src/sunnbear/functions/catalog/f1xx_polynomials/: __init__.py  f101_cubic.py  f102_odd_power.py
src/sunnbear/solvers/: __init__.py  _bisection.py  _interval.py  _regula_falsi.py  _result.py  _run.py  _solver.py  _wrapped_function.py
src/sunnbear/stats/: __init__.py  _pairwise_l1.py  _pseudo_quantiles.py
tests/: conftest.py  test_dummy.py  test_milestone.py
tests/functions/: test_identity.py  test_param_values.py  test_recipes.py  test_registry.py  test_test_function.py
tests/solvers/: test_bisection.py  test_interval.py  test_regula_falsi.py  test_scipy_agreement.py  test_solver_template.py  test_wrapped_function.py
tests/stats/: test_pairwise_l1.py  test_pseudo_quantiles.py
